<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.stclaircollege.fitgrind.ViewCalorieDayLogFragment">

    <!-- Create a ListView to show our food log -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/cardview_calorie_margin"
        android:layout_marginBottom="@dimen/cardview_calorie_margin"
        android:id="@+id/calories_layout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calorie_day_layout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/padding">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/calorie_goal_label"
                        android:gravity="center_horizontal"
                        android:textStyle="normal|bold"
                        android:text="--" />

                    <TextView
                        android:text="@string/calorie_goal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/calorie_title_goal"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:text="--"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/calorie_obtained_label"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/calories_obtained"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/calorie_obtained_title"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/other_nutrient_layout"
        android:elevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:text="--"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_fat_day"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/custom_totalfat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_fat_label_title"
                    android:layout_weight="1"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:text="--"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_carb_day"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/carbohydrate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:text="--"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_protein_day"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/protein_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_log_text"
        android:gravity="center"
        android:textSize="@dimen/listview_font_size"
        android:visibility="gone"
        android:text="@string/not_logged" />

    <TextView
        android:text="@string/title_log_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_log"
        android:textStyle="normal|bold"
        android:textSize="@dimen/title_font_size"
        android:textColor="@color/primaryText"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_shadow_end_color" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calorie_listview"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/padding" />

</LinearLayout>
